--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         Hello!
     </h1>
     <h2>
-        Would you like to play rock paper scissors?
+        Welcome to rock, paper, scissors. Would you like to play a game?
     </h2>
-    <button onclick="game()">Sure, why not?</button>
+    <button id="start-game">Sure, why not?</button>
+    <div id="game"></div>
+    <button id="reset-game" hidden>Play again?</button>
 </body>
 <script src="game.js"></script>
 </html>
