--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </h2>
     <button id="start-game">Sure, why not?</button>
     <div id="game"></div>
-    <button id="reset-game" hidden>Play again?</button>
+    <!-- <button id="reset-game" hidden>Play again?</button> -->
 </body>
 <script src="game.js"></script>
 </html>
